Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42222

Canvas crash on destruction

XMLWordPrintable

    • 93affd9ff660456bde2d380788ea8ebfabb0f1c3

      import QtQuick 2.3
      import QtQuick.Window 2.2
      
      Window {
          Loader {
              sourceComponent: Canvas {
                  Component.onDestruction: getContext("2d")
              }
              Component.onCompleted: active = false
          }
      }
      

        1. TableView.png
          5 kB
          Anthony Groyer
        2. testcanvas.zip
          3 kB
          Anthony Groyer
        3. crash after multiple clicks.txt
          5 kB
          Anthony Groyer
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            sqq S.Gold
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes